# mxp-mcp-server

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GETTING_STARTED.md  Optimize Prime Chat Data Dictionary.md  README.md  docker-compose.yml  knowledge_base.json  mxp_api.py  mxp_api_docs.html  pyproject.toml  requirements.txt  server.py  start.sh  test_connection.py  test_mxp_api.py
examples/: README.md
src/: __init__.py
src/mcp_server/: __init__.py  server.py
src/rest_api/: __init__.py  server.py
src/shared/: __init__.py  db_client.py  mxp_client.py  rag_client.py
tools/: example_tool.py  knowledge_tool.py
